--- a/Practica2.html
+++ b/Practica2.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./Practica2.css">
     <title>Practica 2 Css</title>
 </head>
 <body>
-    
+    <h1>Universidad de la costa</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quibusdam natus eum, illum in dolorem
+        tempora ipsam nulla ea sed itaque, inventore possimus sequi, deserunt totam officia accusantium nobis? Commodi?
+    </p>
 </body>
+
 </html>
