--- a/Practica2.html
+++ b/Practica2.html
@@ -8,11 +8,30 @@
     <link rel="stylesheet" type="text/css" href="./Practica2.css">
     <title>Practica 2 Css</title>
 </head>
+
 <body>
     <h1>Universidad de la costa</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quibusdam natus eum, illum in dolorem
         tempora ipsam nulla ea sed itaque, inventore possimus sequi, deserunt totam officia accusantium nobis? Commodi?
     </p>
+    <div class="container">
+        <div class="elemento1">
+            Elemento 1
+        </div>
+        <div class="elemento2">
+            Elemento 1
+
+        </div>
+        <div class="elemento3">
+            Elemento 1
+
+        </div>
+        <div class="elemento4">
+            Elemento 1
+
+        </div>
+    </div>
+
 </body>
 
 </html>
