--- a/Practica2.html
+++ b/Practica2.html
@@ -10,25 +10,26 @@
 </head>
 
 <body>
+    <header></header>
     <h1>Universidad de la costa</h1>
     <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quibusdam natus
         eum, illum in dolorem
         tempora ipsam nulla ea sed itaque, inventore possimus sequi, deserunt totam officia accusantium nobis? Commodi?
     </p>
-    <div class="container">
+    <!-- <div class="container">
         <div class="elemento1">
             Elemento 1
         </div>
         <div class="elemento2">
-            Elemento 1
+            Elemento 2
         </div>
         <div class="elemento3">
-            Elemento 1
+            Elemento 3
         </div>
         <div class="elemento4">
-            Elemento 1
+            Elemento 4
         </div>
-    </div>
+    </div> -->
     <br>
     <div class="tarjeta">
         <div class="titulo">Mercedes Benz</div>
