--- a/Practica2.html
+++ b/Practica2.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./Practica2.css">
     <title>Practica 2 Css</title>
 </head>
+
 <body>
-    
+    <header></header>
+    <h1>Universidad de la costa</h1>
+    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quibusdam natus
+        eum, illum in dolorem
+        tempora ipsam nulla ea sed itaque, inventore possimus sequi, deserunt totam officia accusantium nobis? Commodi?
+    </p>
+    <div class="container">
+        <div class="elemento1">
+            Elemento 1
+        </div>
+        <div class="elemento2">
+            Elemento 2
+        </div>
+        <div class="elemento3">
+            Elemento 3
+        </div>
+        <div class="elemento4">
+            Elemento 4
+        </div>
+    </div>
+    <br>
+    <div class="tarjeta">
+        <div class="titulo">Mercedes Benz</div>
+        <div class="cuerpo">
+            <img src="https://elcomercio.pe/resizer/IxEZ-hA2T9lOrBURg0eGkqO9-0s=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/CGTD43RUMBDNVCXWDCHUX7DQAY.jpg"
+                alt="muestra" style="width: 100%
+                ;">
+        </div>
+        <div class="pie">
+            <a
+                href="https://www.mercedes-benz.com.co/?gclid=Cj0KCQiAorKfBhC0ARIsAHDzslvabr1SdKnc0TwZAlbCnrAgM2Sb-uNqiNPgrfxhk5yv9OswJrs2MWIaAqRsEALw_wcB">Amg
+                Gtr Pro</a>
+        </div>
+    </div>
+
 </body>
+
 </html>
