--- a/Actividad2.html
+++ b/Actividad2.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Autos 2.0</title>
 </head>
+
 <body>
-    
+    <div id="main-container">
+        <header>
+            <nav>
+                <div class="mobile">
+                    <div class="header">
+                        <button id="bmenu">
+                            <span class="material-icons">&#xe5d2;</span>
+                        </button>
+                        <a href="">Cuc</a>
+                    </div>
+                    <div class="links">
+                        <a href="">Inicio</a>
+                        <!-- <a href=""></a> -->
+                        <a href="">Contactenos</a>
+                    </div>
+                </div>
+
+                <ul>
+                    <li>
+                        <a href="">cuc1</a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li><a href="#" class="links">Inicio</a></li>
+                    <li><a href="#" class="links">Contactenos</a></li>
+                </ul>
+
+            </nav>
+        </header>
+    </div>
 </body>
+
 </html>
