--- a/Actividad2.html
+++ b/Actividad2.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Autos 2.0</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="Actividad2.css">
 </head>
 
 <body>
@@ -18,24 +19,25 @@
                         <button id="bmenu">
                             <span class="material-icons">&#xe5d2;</span>
                         </button>
-                        <a href="">Cuc</a>
-                    </div>
-                    <div class="links">
-                        <a href="">Inicio</a>
-                        <!-- <a href=""></a> -->
-                        <a href="">Contactenos</a>
+                        <a href="">Autos</a>
+
+                        <div class="links">
+                            <a href="">Inicio</a>
+                            <!-- <a href=""></a> -->
+                            <a href="">Contactenos</a>
+                        </div>
                     </div>
                 </div>
-
+                <!-- Escritorio -->
                 <ul>
-                    <li>
-                        <a href="">cuc1</a>
-                    </li>
+                    <li><a href="#" class="link">Cuc</a></li>
+                    <li><a href="#" class="link link-hide">Marcas</a></li>
+                    <li><a href="#" class="link link-hide">Imagenes</a></li>
                 </ul>
 
                 <ul>
-                    <li><a href="#" class="links">Inicio</a></li>
-                    <li><a href="#" class="links">Contactenos</a></li>
+                    <li><a href="#" class="link">Inicio</a></li>
+                    <li><a href="#" class="link">Contactenos</a></li>
                 </ul>
 
             </nav>
