--- a/Actividad2.html
+++ b/Actividad2.html
@@ -19,16 +19,20 @@
                         <button id="bmenu">
                             <span class="material-icons">&#xe5d2;</span>
                         </button>
-                        <a href="">Autos</a>
+                        <a href="#">Autos</a>
 
-                        <div class="links">
-                            <a href="">Inicio</a>
-                            <!-- <a href=""></a> -->
-                            <a href="">Contactenos</a>
+                        <div>
+                            <a href="#">Inicio</a>
+                            <a href="#">Contactenos</a>
                         </div>
+                    </div>
+
+                    <div class="links">
+                        <a href="">lol</a>
                     </div>
                 </div>
                 <!-- Escritorio -->
+
                 <ul>
                     <li><a href="#" class="link">Cuc</a></li>
                     <li><a href="#" class="link link-hide">Marcas</a></li>
