--- a/Actividad2.html
+++ b/Actividad2.html
@@ -16,23 +16,24 @@
             <nav>
                 <div class="mobile">
                     <div class="header">
-                        <button id="bmenu">
-                            <span class="material-icons">&#xe5d2;</span>
-                        </button>
+                        <a href="https://www.cuc.edu.co/"><img src="Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <a href="#">Autos</a>
 
                         <div>
-                            <a href="#">Inicio</a>
-                            <a href="#">Contactenos</a>
+                            <a href="#"><span class="material-icons">&#xe88a;</span></a>
+                            <a href="#"><span class="material-icons">&#xe0cd;</span></a>
                         </div>
                     </div>
 
-                    <div class="links">
+                    <!-- <div class="links">
                         <a href="">lol</a>
-                    </div>
+                        <a href="">lol</a>
+                        <a href="">lol</a>
+                        <a href="">lol</a>
+                    </div> -->
                 </div>
-                <!-- Escritorio -->
 
+                <!-- Escritorio -->
                 <ul>
                     <li><a href="#" class="link">Cuc</a></li>
                     <li><a href="#" class="link link-hide">Marcas</a></li>
