--- a/Actividad2.html
+++ b/Actividad2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autos 2.0</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="Actividad2.css">
+    <link rel="stylesheet" href="src/css/Actividad2.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <nav>
                 <div class="mobile">
                     <div class="header">
-                        <a href="https://www.cuc.edu.co/"><img src="Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
                         <a href="#">Autos</a>
 
                         <div>
