--- a/Actividad2.html
+++ b/Actividad2.html
@@ -16,7 +16,8 @@
             <nav>
                 <div class="mobile">
                     <div class="header">
-                        <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt="" width="100px"></a>
+                        <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt=""
+                                width="150px"></a>
                         <a href="#">Autos</a>
 
                         <div>
@@ -41,8 +42,8 @@
                 </ul>
 
                 <ul>
-                    <li><a href="#" class="link">Inicio</a></li>
-                    <li><a href="#" class="link">Contactenos</a></li>
+                    <a href="#"><span class="material-icons">&#xe88a;</span></a>
+                    <a href="#"><span class="material-icons">&#xe0cd;</span></a>
                 </ul>
 
             </nav>
