--- a/Actividad2.html
+++ b/Actividad2.html
@@ -42,17 +42,11 @@
             </nav>
         </header>
         <main>
-            <div class="tarjeta">
-                <div class="titulo">Mercedes Benz</div>
-                <div class="cuerpo">
-                    <img src="https://elcomercio.pe/resizer/IxEZ-hA2T9lOrBURg0eGkqO9-0s=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/CGTD43RUMBDNVCXWDCHUX7DQAY.jpg"
-                        alt="muestra" style="width: 100%
-                        ;">
-                </div>
-                <div class="pie">
-                    <a
-                        href="https://www.mercedes-benz.com.co/?gclid=Cj0KCQiAorKfBhC0ARIsAHDzslvabr1SdKnc0TwZAlbCnrAgM2Sb-uNqiNPgrfxhk5yv9OswJrs2MWIaAqRsEALw_wcB">Amg
-                        Gtr Pro</a>
+            <div class="container-card">
+                <div class="card">
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
                 </div>
             </div>
         </main>
