--- a/Actividad2.html
+++ b/Actividad2.html
@@ -11,46 +11,54 @@
 </head>
 
 <body>
-    <div id="main-container">
-        <header>
-            <nav>
-                <div class="mobile">
-                    <div class="header">
-                        <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt=""
-                                width="100px"></a>
-                        <a href="#">Autos</a>
+    <!-- <div id="main-container"> -->
+    <header>
+        <nav>
+            <div class="mobile">
+                <div class="header">
+                    <a href="https://www.cuc.edu.co/"><img src="src/Img/LOGO UNICOSTA ALPHA_6.png" alt=""
+                            width="100px"></a>
+                    <a href="#">Autos</a>
 
-                        <div>
-                            <a href="#"><span class="material-icons">&#xe88a;</span></a>
-                            <a href="#"><span class="material-icons">&#xe0cd;</span></a>
-                        </div>
+                    <div>
+                        <a href="#"><span class="material-icons">&#xe88a;</span></a>
+                        <a href="#"><span class="material-icons">&#xe0cd;</span></a>
                     </div>
                 </div>
-
-                <!-- Escritorio -->
-                <ul>
-                    <li><a href="#" class="link">Cuc</a></li>
-                    <li><a href="#" class="link link-hide">Marcas</a></li>
-                    <li><a href="#" class="link link-hide">Imagenes</a></li>
-                </ul>
-
-                <ul>
-                    <a href="#"><span class="material-icons">&#xe88a;</span></a>
-                    <a href="#"><span class="material-icons">&#xe0cd;</span></a>
-                </ul>
-                <br>
-            </nav>
-        </header>
-        <main>
-            <div class="container-card">
-                <div class="card">
-                    <figure>
-                        <img src="" alt="">
-                    </figure>
-                </div>
             </div>
-        </main>
-    </div>
+
+            <!-- Escritorio -->
+            <ul>
+                <li><a href="#" class="link">Cuc</a></li>
+                <li><a href="#" class="link link-hide">Marcas</a></li>
+                <li><a href="#" class="link link-hide">Imagenes</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#"><span class="material-icons">&#xe88a;</span></a></li>
+                <li><a href="#"><span class="material-icons">&#xe0cd;</span></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <nav>
+                <div class="container-card">
+                    <div class="card">
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                    </div>
+                </div>
+            </nav>
+        </section>
+
+        <section>
+
+        </section>
+    </main>
+    <!-- </div> -->
 </body>
 
 </html>
