--- a/Actividad2.html
+++ b/Actividad2.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <!-- <div id="main-container"> -->
     <header>
         <nav>
             <div class="mobile">
@@ -42,23 +41,210 @@
     </header>
 
     <main>
-        <section>
-            <nav>
-                <div class="container-card">
-                    <div class="card">
-                        <figure>
-                            <img src="" alt="">
-                        </figure>
+        <div class="mobile-contenido">
+            <div class="container-card">
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/AmgGtrPro.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
                     </div>
                 </div>
-            </nav>
-        </section>
 
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/bmwM8.jpeg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/Audi_e-tron_GT.webp" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro4</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/HondaCivicTypeR.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro5</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/SubaruBrz.webp" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro6</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Fila-1 -->
         <section>
+            <div class="container-card">
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/AmgGtrPro.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
 
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/bmwM8.jpeg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/Audi_e-tron_GT.webp" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
         </section>
+
+        <!-- Fila-2 -->
+        <section>
+            <div class="container-card">
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro4</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/HondaCivicTypeR.jpg" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro5</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <figure>
+                        <img src="src/Img/SubaruBrz.webp" alt="">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Carro6</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
+                            quos
+                            aliquam
+                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa
+                            possimus
+                            accusamus
+                            exercitationem laudantium enim.</p>
+                        <a href="#">Leer Mas</a>
+                    </div>
+                </div>
+        </section>
+
     </main>
-    <!-- </div> -->
 </body>
 
 </html>
