--- a/Actividad2.html
+++ b/Actividad2.html
@@ -41,97 +41,97 @@
     </header>
 
     <main>
-        <div class="mobile-contenido">
-            <div class="container-card">
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/AmgGtrPro.jpg" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/bmwM8.jpeg" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/Audi_e-tron_GT.webp" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro4</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/HondaCivicTypeR.jpg" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro5</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <figure>
-                        <img src="src/Img/SubaruBrz.webp" alt="">
-                    </figure>
-                    <div class="contenido">
-                        <h3>Carro6</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
-                            aliquam
-                            ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
-                            accusamus
-                            exercitationem laudantium enim.</p>
-                        <a href="#">Leer Mas</a>
-                    </div>
+        <div class="mobile-container">
+            <!-- <div class="container-card"> -->
+            <div class="card">
+                <figure>
+                    <img src="src/Img/AmgGtrPro.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
                 </div>
             </div>
+
+            <div class="card">
+                <figure>
+                    <img src="src/Img/bmwM8.jpeg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <figure>
+                    <img src="src/Img/Audi_e-tron_GT.webp" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <figure>
+                    <img src="src/Img/HondaCivicTypeR.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <figure>
+                    <img src="src/Img/SubaruBrz.webp" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Carro6</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
+                        aliquam
+                        ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
+                        accusamus
+                        exercitationem laudantium enim.</p>
+                    <a href="#">Leer Mas</a>
+                </div>
+            </div>
+            <!-- </div> -->
         </div>
 
         <!-- Fila-1 -->
