--- a/Actividad2.html
+++ b/Actividad2.html
@@ -48,7 +48,7 @@
                     <img src="src/Img/AmgGtrPro.jpg" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro1</h3>
+                    <h3>Mercedes Benz: Amg Gtr Pro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -63,7 +63,7 @@
                     <img src="src/Img/bmwM8.jpeg" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro2</h3>
+                    <h3>Bmw: M8 Competition</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -78,7 +78,7 @@
                     <img src="src/Img/Audi_e-tron_GT.webp" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro3</h3>
+                    <h3>Audi: E-Tron GT</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -87,12 +87,13 @@
                     <a href="#">Leer Mas</a>
                 </div>
             </div>
+
             <div class="card">
                 <figure>
                     <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro4</h3>
+                    <h3>Porche 911: Gt3 RS</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -107,7 +108,7 @@
                     <img src="src/Img/HondaCivicTypeR.jpg" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro5</h3>
+                    <h3>Honda: Civic Type R</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -122,7 +123,7 @@
                     <img src="src/Img/SubaruBrz.webp" alt="">
                 </figure>
                 <div class="contenido">
-                    <h3>Carro6</h3>
+                    <h3>Subaru: Brz</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error quos
                         aliquam
                         ipsum nostrum esse doloremque eligendi necessitatibus alias, omnis culpa ipsa possimus
@@ -142,7 +143,7 @@
                         <img src="src/Img/AmgGtrPro.jpg" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro1</h3>
+                        <h3>Mercedes Benz: Amg Gtr Pro</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -159,7 +160,7 @@
                         <img src="src/Img/bmwM8.jpeg" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro2</h3>
+                        <h3>Bmw: M8 Competition</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -176,7 +177,7 @@
                         <img src="src/Img/Audi_e-tron_GT.webp" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro3</h3>
+                        <h3>Audi: E-Tron GT</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -187,6 +188,7 @@
                         <a href="#">Leer Mas</a>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- Fila-2 -->
@@ -197,7 +199,7 @@
                         <img src="src/Img/Porche911Gt3Rs.jpg" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro4</h3>
+                        <h3>Porche 911: Gt3 RS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -214,7 +216,7 @@
                         <img src="src/Img/HondaCivicTypeR.jpg" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro5</h3>
+                        <h3>Honda: Civic Type R</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -231,7 +233,7 @@
                         <img src="src/Img/SubaruBrz.webp" alt="">
                     </figure>
                     <div class="contenido">
-                        <h3>Carro6</h3>
+                        <h3>Subaru: Brz</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ab veniam nisi error
                             quos
                             aliquam
@@ -242,6 +244,7 @@
                         <a href="#">Leer Mas</a>
                     </div>
                 </div>
+            </div>
         </section>
 
     </main>
